--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <main>
             <h1>Apply</h1>
             <p>Thank you for your interest in The Best University. As a part of the application process, you must create an account in order to track your admission documents and receive information from us.If you have any questions, please contact the Admissions Office at 1-800-666-9876.</p>
-            <p>Fields with a red border are required.</p>
+            <p>Fields marked red are required.</p>
 
             <form method="get" action="thanks.html" class="myForm" autocomplete="on">
                 <h3>Personal Information</h3>
@@ -63,9 +63,9 @@
                 <label>ZIP Code <input type="number" name="zip" autocomplete="postal-code" title="Enter Your ZIP Code"></label>
 
                 <h3>Communication Preferences</h3>
-                <label><input type="radio" name="communication-preference" value="text">Send Text Message Updates</label>
-                <label><input type="radio" name="communication-preference" value="email">Send Email Updates</label>
-                <label><input type="radio" name="communication-preference" value="mail">Send Mail Updates</label>
+                <label><input type="radio" name="communication-preference" value="text"> Send Text Message Updates</label>
+                <label><input type="radio" name="communication-preference" value="email"> Send Email Updates</label>
+                <label><input type="radio" name="communication-preference" value="mail"> Send Mail Updates</label>
 
                 <h3>Previous Education</h3>
                 <label>School Type
@@ -80,9 +80,9 @@
                 <label>Graduation Date<input type="date"></label>
 
                 <h3>Education Completed</h3>
-                <label><input type="checkbox" name="ged">GED</label>
-                <label><input type="checkbox" name="diploma">High School Diploma</label>
-                <label><input type="checkbox" name="2-year">Two Year Associates Degree</label>
+                <label><input type="checkbox" name="ged"> GED</label>
+                <label><input type="checkbox" name="diploma"> High School Diploma</label>
+                <label><input type="checkbox" name="2-year"> Two Year Associates Degree</label>
 
 
                 <h3>Account Information</h3>
